# backprop

./: .gitignore  CMakeLists.txt  README.md  neural.sln
examples/: CMakeLists.txt  data.hpp  example1.cpp  example2.cpp  example3.cpp
examples/data/: parkinsons.csv
neural/: Backpropagation.hpp  CPULayer.hpp  Common.hpp  GPUNetwork.cu  GPUNetwork.cuh  INetwork.cpp  INetwork.h  Layer.hpp  Network.hpp  TestPrint.cu  TestPrint.cuh  ao.cpp  neural.cpp  neural.vcxproj  neural.vcxproj.filters
src/: Backpropagation.cpp  Backpropagation.hpp  CMakeLists.txt  DeviceMatrix.hpp  DeviceNetwork.hpp  GPUNetwork.cu  GPUNetwork.cuh  Layer.hpp  MNISTLoader.hpp  Network.hpp  Utilities.hpp  backprop.hpp
